--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             transform: scale(1.1);
 
         }
+        .h3:hover{
+            transition: 1s;
+            transform: scale(1.1);
+
+        }
         
     </style>
 </head>
